# SPDX-FileCopyrightText: Copyright (c) 2023-2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: LicenseRef-NVIDIA-SOFTWARE-LICENSE

[build-system]
requires = [
    "setuptools>=80.0.0", 
    "setuptools-scm[simple]>=8",
    "cython>=3.2,<3.3", 
    "pyclibrary>=0.1.7"
]
build-backend = "build_hooks"
backend-path = ["."]

[project]
name = "cuda-bindings"
description = "Python bindings for CUDA"
authors = [{name = "NVIDIA Corporation", email = "cuda-python-conduct@nvidia.com"},]
license = "LicenseRef-NVIDIA-SOFTWARE-LICENSE"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: GPU :: NVIDIA CUDA",
]
dynamic = [
    "version",
    "readme",
]
dependencies = [
  "cuda-pathfinder ~=1.1",
]

[project.optional-dependencies]
all = [
    "nvidia-cuda-nvcc-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-nvjitlink-cu12>=12.3",
    "nvidia-nvfatbin-cu12",
    "nvidia-cufile-cu12; sys_platform == 'linux'",
]

test = [
    "cython>=3.2,<3.3",
    "setuptools>=77.0.0",
    "numpy>=1.21.1",
    "pytest>=6.2.4",
    "pytest-benchmark>=3.4.1",
    "pyglet>=2.1.9"
]

[project.urls]
Repository = "https://github.com/NVIDIA/cuda-python"
Documentation = "https://nvidia.github.io/cuda-python/"

[tool.setuptools.packages.find]
include = ["cuda*"]

[tool.setuptools.dynamic]
readme = { file = ["DESCRIPTION.rst"], content-type = "text/x-rst" }

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

exclude = ["cuda/bindings/_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle Error
    "E",
    # Pyflakes
    "F",
    # pycodestyle Warning
    "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "UP007", 
    "E741", # ambiguous variable name such as I
    "B007", # rename unsued loop variable to _name 
    "UP035" # UP006, UP007, UP035 complain about deprecated Typing.<type> use, but disregard backward compatibility of python version
]

exclude = ["cuda/bindings/_version.py"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["F401"]
"__init__.py" = ["F401"]

"examples/**/*" = [
  "E722",
  "E501" # line too long
  ]

"tests/**/*" = [
  "E722", 
  "UP022",
  "E402", # module level import not at top of file
  "F841"] # F841 complains about unused variables, but some assignments have side-effects that could be useful for tests (func calls for example)

"benchmarks/**/*" = [
  "E722", 
  "UP022",
  "E402", # module level import not at top of file
  "F841"] # F841 complains about unused variables, but some assignments have side-effects that could be useful for tests (func calls for example)

[tool.setuptools_scm]
root = ".."
version_file = "cuda/bindings/_version.py"
# We deliberately do not want to include the version suffixes (a/b/rc) in cuda-bindings versioning
tag_regex = "^(?P<version>v\\d+\\.\\d+\\.\\d+)"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*[0-9]*"]