# SPDX-FileCopyrightText: Copyright (c) 2023-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: LicenseRef-NVIDIA-SOFTWARE-LICENSE
[build-system]
requires = [
    "setuptools>=80.0.0",
    "setuptools_scm[simple]>=8",
    "cython>=3.2,<3.3",
    "pyclibrary>=0.1.7",
    "cuda-pathfinder>=1.5",
]
build-backend = "build_hooks"
backend-path = ["."]

[project]
name = "cuda-bindings"
description = "Python bindings for CUDA"
authors = [
    { name = "NVIDIA Corporation", email = "cuda-python-conduct@nvidia.com" },
]
license = "LicenseRef-NVIDIA-SOFTWARE-LICENSE"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: GPU :: NVIDIA CUDA",
]
dynamic = ["version", "readme"]
dependencies = ["cuda-pathfinder >=1.4.2"]

[project.optional-dependencies]
all = [
    "cuda-toolkit[nvrtc,nvjitlink,nvvm,nvfatbin]==13.*",
    "cuda-toolkit[cufile]==13.*; sys_platform == 'linux'",
    "cuda-toolkit==13.*",
    "nvidia-cudla==13.*; platform_system == 'Linux' and platform_machine == 'aarch64'",
]

[dependency-groups]
test = [
    "cython>=3.2,<3.3",
    "setuptools>=80.0.0",
    # TODO: remove the Python 3.15 guard once 3.15 is officially supported
    "matplotlib==3.10.9; python_version < '3.15'",
    "numpy==2.4.6",
    "pytest==9.1.0",
    "pytest-benchmark==5.2.3",
    "pytest-repeat==0.9.4",
    "pytest-randomly==4.1.0",
    "pyglet==2.1.14",
]

[project.urls]
Repository = "https://github.com/NVIDIA/cuda-python"
Documentation = "https://nvidia.github.io/cuda-python/"

[tool.setuptools.packages.find]
include = ["cuda*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["*.pxd", "*.pxi"]
"cuda.bindings._bindings" = ["*.h"]
"cuda.bindings._lib" = ["*.h"]

[tool.setuptools.dynamic]
readme = { file = ["DESCRIPTION.rst"], content-type = "text/x-rst" }

[tool.cibuildwheel]
skip = "*-musllinux_*"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = "native"

[tool.cibuildwheel.windows]
archs = "AMD64"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --namespace-pkg cuda -w {dest_dir} {wheel}"

[tool.pytest.ini_options]
required_plugins = "pytest-benchmark"
addopts = "--benchmark-disable --showlocals"
norecursedirs = ["tests/cython", "examples"]
xfail_strict = true

[tool.setuptools_scm]
root = ".."
version_file = "cuda/bindings/_version.py"
# Preserve a/b pre-release suffixes, but intentionally strip rc suffixes.
tag_regex = "^(?P<version>v\\d+\\.\\d+\\.\\d+(?:[ab]\\d+)?)"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*[0-9]*"]
