# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "cuda-pathfinder"
description = "Pathfinder for CUDA components"
authors = [{ name = "NVIDIA Corporation", email = "cuda-python-conduct@nvidia.com" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dynamic = ["version", "readme"]
dependencies = []

[dependency-groups]
test = [
    "pytest>=6.2.4",
    "pytest-mock",
    "pytest-repeat",
    "pytest-randomly",
]
# Internal organization of test dependencies.
cu12 = [
    "cuda-toolkit[nvcc,cublas,nvrtc,cudart,cufft,curand,cusolver,cusparse,npp,nvfatbin,nvjitlink,nvjpeg,cccl,cupti,profiler]==12.*,!=12.9.2; sys_platform == 'win32'",
    "cuda-toolkit[nvcc,cublas,nvrtc,cudart,cufft,curand,cusolver,cusparse,npp,nvfatbin,nvjitlink,nvjpeg,cccl,cupti,profiler]==12.*; sys_platform != 'win32'",
    "cuda-toolkit[cufile]==12.*; sys_platform != 'win32'",
    "cutensor-cu12",
    "nvidia-cublasmp-cu12; sys_platform != 'win32'",
    "nvidia-cudss-cu12",
    "nvidia-cufftmp-cu12; sys_platform != 'win32'",
    "nvidia-cusolvermp-cu12; sys_platform != 'win32'",
    "nvidia-cusparselt-cu12",
    "nvidia-libmathdx-cu12",
    "nvidia-nccl-cu12; sys_platform != 'win32'",
    "nvidia-nvshmem-cu12; sys_platform != 'win32'",
]
cu13 = [
    "cuda-toolkit[nvcc,cublas,nvrtc,cudart,cufft,curand,cusolver,cusparse,npp,nvfatbin,nvjitlink,nvjpeg,cccl,cupti,profiler,nvvm]==13.*,!=13.0.3; sys_platform == 'win32'",
    "cuda-toolkit[nvcc,cublas,nvrtc,cudart,cufft,curand,cusolver,cusparse,npp,nvfatbin,nvjitlink,nvjpeg,cccl,cupti,profiler,nvvm]==13.*; sys_platform != 'win32'",
    "cuda-toolkit[cufile]==13.*; sys_platform != 'win32'",
    "cutensor-cu13",
    "nvidia-cublasmp-cu13; sys_platform != 'win32'",
    "nvidia-cudla; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "nvidia-cudss-cu13",
    "nvidia-cufftmp-cu13; sys_platform != 'win32'",
    "nvidia-cusolvermp-cu13; sys_platform != 'win32'",
    "nvidia-cusparselt-cu13",
    "nvidia-libmathdx-cu13",
    "nvidia-nccl-cu13; sys_platform != 'win32'",
    "nvidia-nvshmem-cu13; sys_platform != 'win32'",
]
host = [
    "nvidia-cutlass",
    "nvpl-fft; platform_system == 'Linux' and platform_machine == 'aarch64'",
]

# User-facing dependencies, e.g. pip install --group test-cu13
test-cu12 = [
    { include-group = "test" },
    { include-group = "cu12" },
    { include-group = "host" },
]
test-cu13 = [
    { include-group = "test" },
    { include-group = "cu13" },
    { include-group = "host" },
]

[tool.uv]
conflicts = [
    [
        { group = "cu12" },
        { group = "cu13" },
    ],
    [
        { group = "test-cu12" },
        { group = "test-cu13" },
    ],
]

[project.urls]
Repository = "https://github.com/NVIDIA/cuda-python"
Documentation = "https://nvidia.github.io/cuda-python/"

[tool.setuptools]
packages = { find = { include = ["cuda*"] } }

[tool.setuptools.dynamic]
readme = { file = ["DESCRIPTION.rst"], content-type = "text/x-rst" }

[build-system]
requires = [
    "setuptools>=80.0.0",
    "setuptools_scm[simple]>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
version_file = "cuda/pathfinder/_version.py"
# Preserve a/b pre-release suffixes, but intentionally strip rc suffixes.
tag_regex = "^cuda-pathfinder-(?P<version>v\\d+\\.\\d+\\.\\d+(?:[ab]\\d+)?)"
git_describe_command = [ "git", "describe", "--dirty", "--tags", "--long", "--match", "cuda-pathfinder-v*[0-9]*" ]

[tool.pytest.ini_options]
addopts = "--showlocals"

[tool.mypy]
# Basic settings
python_version = "3.10"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Start strict, but allow some flexibility
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Allow some common patterns to keep it simple
allow_redefinition = true
implicit_reexport = true

# Ignore missing imports for now (you can tighten this later)
ignore_missing_imports = true

# Only check your package
[[tool.mypy.overrides]]
module = "cuda.pathfinder.*"
disallow_untyped_defs = true

# Be more lenient with test files
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true
